# local-agent-kv-cache-benchmark

./: .env.example  .gitignore  README.md  kv-cache-experiment-report.pptx  pyproject.toml
docs/: plan.md
logs/: formal_coding16k_seq_coding_16k_stable_prefix_no_cache_r01.ctx20480_error.csv  formal_coding4k_coding_4k_front_volatile_default_cache.partial_cross_repeat_polluted.csv  formal_coding4k_coding_4k_stable_prefix_no_cache.legacy_cross_repeat.csv
scripts/: download_model.py  make_workloads.py  plot_followups.py  plot_report_figures.py  plot_results.py  run_benchmark.py  run_suite.py  summarize_raw.py
workloads/: coding_16k_end_volatile.jsonl  coding_16k_front_volatile.jsonl  coding_16k_middle_volatile.jsonl  coding_16k_stable_prefix.jsonl  coding_2k_end_volatile.jsonl  coding_2k_front_volatile.jsonl  coding_2k_middle_volatile.jsonl  coding_2k_stable_prefix.jsonl  coding_4k_end_volatile.jsonl  coding_4k_front_volatile.jsonl  coding_4k_middle_volatile.jsonl  coding_4k_stable_prefix.jsonl  coding_8k_end_volatile.jsonl  coding_8k_front_volatile.jsonl  coding_8k_middle_volatile.jsonl  coding_8k_stable_prefix.jsonl  rag_16k_end_volatile.jsonl  rag_16k_front_volatile.jsonl  rag_16k_middle_volatile.jsonl  rag_16k_stable_prefix.jsonl  rag_2k_end_volatile.jsonl  rag_2k_front_volatile.jsonl  rag_2k_middle_volatile.jsonl  rag_2k_stable_prefix.jsonl  rag_4k_end_volatile.jsonl  rag_4k_front_volatile.jsonl  rag_4k_middle_volatile.jsonl  rag_4k_stable_prefix.jsonl  rag_8k_end_volatile.jsonl  rag_8k_front_volatile.jsonl  rag_8k_middle_volatile.jsonl  rag_8k_stable_prefix.jsonl
(+93 files in other folders)
